--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react": "^18.2.20",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.1",
