--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@types/react": "^18.2.20",
+    "babel-plugin-macros": "^3.1.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "vite-plugin-babel-macros": "^1.0.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.1",
@@ -25,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
