--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react": "^18.2.20",
     "babel-plugin-macros": "^3.1.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.8.9",
     "styled-components": "^6.0.7",
     "vite-plugin-babel-macros": "^1.0.6"
   },
@@ -24,6 +29,7 @@
     "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^14.0.0",
     "@types/react-dom": "^18.2.7",
+    "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -39,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.6.3",
     "prettier": "^3.0.2",
+    "sass": "^1.66.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
