--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.20",
     "babel-plugin-macros": "^3.1.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
